Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,8 +52,11 @@ steps:
 
   displayName: 'Npm install Cordova'
 
-  
+- script: |
 
+     ng test
+
+  displayName: 'testing ...'
 
 
 - script: |
